portfolio image responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,28 +50,27 @@
             </div>
             <div class="card-body">
               <div class="row">
-                <div class="img-container border rounded">
+                <a class="img-container border rounded" href="#">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Hangman">
                   <div class="label border rounded">Hangman</div>
-                </div>
-                <div class="img-container border rounded">
+                </a>
+                <a class="img-container border rounded" href="#">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="RPG Game">
                   <div class="label border rounded">RPG Game</div>
-                </div>
-                <div class="img-container border rounded">
+                </a>
+                <a class="img-container border rounded" href="#">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Trivia Game">
                   <div class="label border rounded">Trivia Game</div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="img-container border rounded">
+                </a>
+                <div class="w-100 d-none dg-md-block"></div>
+                <a class="img-container border rounded" href="#">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Rutgers Info Widget">
                   <div class="label border rounded">Rutgers Info Widget</div>
-                </div>
-                <div class="img-container border rounded">
+                </a>
+                <a class="img-container border rounded" href="#">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Rock Paper Scissors">
                   <div class="label border rounded">Rocker Paper Scissors</div>
-                </div>
+                </a>
               </div>
             </div>
           </div>
