--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Hangman">
                   <div class="label border rounded">Hangman</div>
                 </a>
-                <a class="img-container border rounded" href="#">
+                <a class="img-container border rounded" href="https://esalvatier.github.io/unit-4-game/">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="RPG Game">
                   <div class="label border rounded">RPG Game</div>
                 </a>
