trivia game link added

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                   <img src="assets/images/300x200.png" class="img-fluid" alt="RPG Game">
                   <div class="label border rounded">RPG Game</div>
                 </a>
-                <a class="img-container border rounded" href="#">
+                <a class="img-container border rounded" href="https://esalvatier.github.io/TriviaGame/">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Trivia Game">
                   <div class="label border rounded">Trivia Game</div>
                 </a>
