--- a/portfolio.html
+++ b/portfolio.html
@@ -44,22 +44,22 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
+          <div class="card" id="portfolioCard">
             <div class="card-header">
               Portfolio
             </div>
             <div class="card-body">
               <div class="row">
                 <a class="img-container border rounded" href="https://esalvatier.github.io/Word-Guess-Game/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="Hangman">
+                  <img src="assets/images/noose-edi.jpg" class="img-fluid" alt="Hangman" height="200" width="300">
                   <div class="label border rounded">Hangman</div>
                 </a>
                 <a class="img-container border rounded" href="https://esalvatier.github.io/unit-4-game/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="RPG Game">
+                  <img src="assets/images/800px-Dice.jpg" class="img-fluid" alt="RPG Game" height="200" width="300">
                   <div class="label border rounded">RPG Game</div>
                 </a>
                 <a class="img-container border rounded" href="https://esalvatier.github.io/TriviaGame/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="Trivia Game">
+                  <img src="assets/images/1_Km98PgzRp9yRYfVZeSzwzQ.png" class="img-fluid" alt="Trivia Game" height="200" width="300">
                   <div class="label border rounded">Trivia Game</div>
                 </a>
                 <div class="w-100 d-none dg-md-block"></div>
