--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,14 @@
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Rock Paper Scissors">
                   <div class="label border rounded">Rocker Paper Scissors</div>
                 </a>
+                <a class="img-container border rounded" href="https://github.com/esalvatier/liri-node-app">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="LIRI CLI">
+                  <div class="label border rounded">LIRI CLI</div>
+                </a>
+                <a class="img-container border rounded" href="https://github.com/esalvatier/wordguess_cli">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Wordguess CLI">
+                  <div class="label border rounded">Wordguess CLI</div>
+                </a>
               </div>
             </div>
           </div>
