new project add

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,6 +79,10 @@
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Wordguess CLI">
                   <div class="label border rounded">Wordguess CLI</div>
                 </a>
+                <a class="img-container border rounded" href="https://github.com/esalvatier/bamazon_cli">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <div class="label border rounded">Bamazon CLI</div>
+                </a>
               </div>
             </div>
           </div>
