new stuff added

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,8 @@
         <div class="col-md-12">
           <div class="card" id="portfolioCard">
             <div class="card-header">
-              Portfolio
+              <h1>Portfolio</h1>
+              <h4>Heroku apps may take a minute to load, please be patient</h4>
             </div>
             <div class="card-body">
               <div class="row">
@@ -82,6 +83,14 @@
                 <a class="img-container border rounded" href="https://github.com/esalvatier/bamazon_cli">
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
                   <div class="label border rounded">Bamazon CLI</div>
+                </a>
+                <a class="img-container border rounded" href="https://uwafriendfinder.herokuapp.com/">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <div class="label border rounded">FriendFinder</div>
+                </a>
+                <a class="img-container border rounded" href="https://mes-uwaburger.herokuapp.com/">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <div class="label border rounded">Eat-Da-Burger</div>
                 </a>
               </div>
             </div>
