--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,10 @@
                   <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
                   <div class="label border rounded">Eat-Da-Burger</div>
                 </a>
+                <a class="img-container border rounded" href="https://mdt-pcalendar.herokuapp.com/">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <div class="label border rounded">Calendar Event App</div>
+                </a>
               </div>
             </div>
           </div>
