homework clicky game added

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,20 +85,24 @@
                   <div class="label border rounded">Bamazon CLI</div>
                 </a>
                 <a class="img-container border rounded" href="https://uwafriendfinder.herokuapp.com/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Friend Finder">
                   <div class="label border rounded">FriendFinder</div>
                 </a>
                 <a class="img-container border rounded" href="https://mes-uwaburger.herokuapp.com/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Eat Da Burger">
                   <div class="label border rounded">Eat-Da-Burger</div>
                 </a>
                 <a class="img-container border rounded" href="https://mdt-pcalendar.herokuapp.com/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Calendar Event App">
                   <div class="label border rounded">Calendar Event App</div>
                 </a>
                 <a class="img-container border rounded" href="https://mes-mongoose-scraper.herokuapp.com/">
-                  <img src="assets/images/300x200.png" class="img-fluid" alt="Bamazon CLI">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Webscraping">
                   <div class="label border rounded">All That's Fit to Scrape (io9)</div>
+                </a>
+                <a class="img-container border rounded" href="https://esalvatier.github.io/clickyGame/">
+                  <img src="assets/images/300x200.png" class="img-fluid" alt="Clicky Game">
+                  <div class="label border rounded">Clicky Game!</div>
                 </a>
               </div>
             </div>
